# LOB-market-making-sim

./: README.md
lob-market-making-sim/: README.md  pyproject.toml
lob-market-making-sim/logs/: evaluations.npz
lob-market-making-sim/logs/DQN_1/: events.out.tfevents.1751886983.0587437086.wireless.umich.net.6549.0
lob-market-making-sim/logs/DQN_2/: events.out.tfevents.1751889112.0587437086.wireless.umich.net.16546.0
lob-market-making-sim/logs/DQN_3/: events.out.tfevents.1751890254.0587437086.wireless.umich.net.22764.0
lob-market-making-sim/logs/DQN_4/: events.out.tfevents.1751902011.0587437086.wireless.umich.net.58086.0
lob-market-making-sim/logs/DQN_5/: events.out.tfevents.1752407734.0587437086.wireless.umich.net.64636.0
lob-market-making-sim/notebooks/: 00_data_check.ipynb  01_AS_baseline.ipynb  11_debug_AS.ipynb  20_AS_baseline.ipynb
lob-market-making-sim/notebooks/.ipynb_checkpoints/: 00_data_check-checkpoint.ipynb
lob-market-making-sim/notebooks/data/parquet/: AMZN_2025-06-12.parquet
lob-market-making-sim/src/lob_market_making_sim/core/: engine.py  order_book.py
lob-market-making-sim/src/lob_market_making_sim/evaluation/: vol.py
lob-market-making-sim/src/lob_market_making_sim/io/: loader.py  schema.py  store.py
lob-market-making-sim/src/lob_market_making_sim/models/: __init__.py  avellaneda.py  base.py
lob-market-making-sim/tests/: test_gymnasium.py  test_models.py  test_order_book.py  test_replay_engine.py  test_vol.py
lob-market-making-sim/tests/data/: sample_messages_AMZN.csv
logs/: evaluations.npz
(+6 files in other folders)
