[project]
name = "lob-market-making-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "lmalmud",email = "lmalmud2@jh.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyarrow",
    "pandas",
    "pytest",
    "rich"
]

[tool.poetry]
packages = [{include = "lob_market_making_sim", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
